--- a/app/src/main/res/layout/item_song.xml
+++ b/app/src/main/res/layout/item_song.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="#CA6565"
+    android:background="@color/third_orange"
     android:orientation="horizontal"
     android:padding="8dp">
 
@@ -12,7 +12,9 @@
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:text="Song Name"
-        android:textSize="16sp" />
+        android:textColor="@color/black"
+        android:textSize="16sp"
+        android:textStyle="bold" />
 
     <Button
         android:id="@+id/btnDelete"
