--- a/app/src/main/res/layout/activity_join_room.xml
+++ b/app/src/main/res/layout/activity_join_room.xml
@@ -35,6 +35,7 @@
         android:backgroundTint="@color/white"
         android:hint="@string/enter_song_name"
         android:inputType="text"
+        android:maxLength="20"
         android:textColor="@color/white"
         android:textColorHint="@color/white"
         android:textSize="20sp"
