--- a/app/src/main/res/layout/item_song.xml
+++ b/app/src/main/res/layout/item_song.xml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@color/third_orange"
+    android:background="@color/black"
     android:orientation="horizontal"
     android:padding="8dp">
 
@@ -11,14 +13,23 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="1"
-        android:text="Song Name"
-        android:textColor="@color/black"
+        android:text="@string/song_name"
+        android:textColor="@color/main_orange"
         android:textSize="16sp"
         android:textStyle="bold" />
 
     <Button
         android:id="@+id/btnDelete"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Delete" />
+        android:layout_width="70dp"
+        android:layout_height="70dp"
+        android:text="@string/delete"
+        android:textColor="#121212"
+        app:strokeColor="@color/black"
+        app:strokeWidth="2dp"
+        android:background="@drawable/custom_shapes"
+        android:textSize="9sp"
+        android:textStyle="bold"
+        tools:ignore="SmallSp" />
+
+
 </LinearLayout>
