--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -26,6 +26,7 @@
 
 
     <ImageView
+        android:contentDescription="@string/logoaplikacie"
         android:id="@+id/imageView"
         android:layout_width="120dp"
         android:layout_height="120dp"
